[package]
name = "litefan"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["macros", "sync", "time"] }

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
